# Convertisseur-nombre-en-lettres

projet-c-dev/: CMakeLists.txt  README.rst
projet-c-dev/cmake/: FindSphinx.cmake  FindValgrind.cmake
projet-c-dev/docs/: CMakeLists.txt  api.rst  conf.py  decomposition.rst  french.rst  index.rst  roman.rst
projet-c-dev/src/: CMakeLists.txt  Doxyfile
projet-c-dev/src/lib/: CMakeLists.txt
projet-c-dev/src/lib/decomposition/: decomposition.c  decomposition.h  decomposition.inc
projet-c-dev/src/lib/french/: date.c  date.h  french.c  french.h
projet-c-dev/src/lib/roman/: roman.c  roman.h  roman.inc
projet-c-dev/src/program/: CMakeLists.txt  main.c
projet-c-dev/tests/lib/: CMakeLists.txt
projet-c-dev/tests/lib/decomposition/: CMakeLists.txt  test-decompose-by-three.c  test-decompose.c  test-get-addends-len.c  test-get-addends.c  test-get-number-of-digits.c  test-get-number.c
projet-c-dev/tests/lib/french/: CMakeLists.txt  test-convert-not-round-two-digits-number.c  test-convert-tens.c  test-convert-three-or-less-digits_number.c  test-convert-to-french-date.c  test-convert-to-french.c  test-convert-two-digits-number.c  test-convert-units.c  test-is-french-dialect.c
projet-c-dev/tests/lib/roman/: CMakeLists.txt  test-convert-decomposition-addend-to-roman-additive.c  test-convert-decomposition-addend-to-roman-no-key.c  test-convert-decomposition-addend-to-roman-substractive.c  test-convert-decomposition-addend-to-roman.c  test-convert-to-roman.c  test-find-high-key-bound-value.c  test-find-low-key-bound-value.c  test-get-symbol.c  test-is-in-roman-range.c  (+1 more)
